# chip8-emu

./: CHIP8Emulator  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
src/: Application.cpp  Application.h  CHIP8.cpp  CHIP8.h  Logger.cpp  Logger.h  main.cpp
